--- a/index.html
+++ b/index.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-theme="dark">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>🔥 Stars Sensi FF</title>
+  <title>mateussxl7 | Futuristic Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 </head>
 <body>
-  <!-- Tela de Login -->
-  <div id="login" class="login-container show">
-    <h1>🔐 Bem-vindo ao <span class="logo">Stars Sensi FF</span></h1>
-    <input id="nick" placeholder="Digite seu nick Free Fire 🔥" />
-    <button onclick="entrar()">🚀 Entrar</button>
-    <footer>👾 Criado por Mateus LIMA</footer>
-  </div>
+  <div id="vanta-bg"></div>
 
-  <!-- Conteúdo Principal -->
-  <div id="main" class="main-content hidden">
-    <header>
-      <h2>🎯 Gerador de Sensibilidade</h2>
-      <button onclick="toggleTheme()">🌙/☀️</button>
-    </header>
+  <header>
+    <h1 class="neon-title">mateussxl7 🎭</h1>
+    <p id="typewriter"></p>
+  </header>
 
-    <label>📱 Modelo do Celular:</label>
-    <select id="modelo">
-      <option>Samsung</option>
-      <option>iPhone</option>
-      <option>Motorola</option>
-      <option>Xiaomi</option>
-      <option>Realme</option>
-      <option>Outro</option>
-    </select>
-
-    <label>⚙️ DPI (ex: 521):</label>
-    <input type="number" id="dpi" placeholder="Digite sua DPI" max="2000" />
-
-    <button onclick="gerarSensi()">🎮 Gerar Sensibilidade</button>
-
-    <div class="sensi-box hidden" id="resultado">
-      <p>🔧 Geral: <span id="geral">--</span></p>
-      <p>🔴 Ponto Vermelho: <span id="vermelho">--</span></p>
-      <p>🔭 2x: <span id="x2">--</span></p>
-      <p>🎯 4x: <span id="x4">--</span></p>
-      <p>🔫 AWM: <span id="awm">--</span></p>
-      <button onclick="copiarSensi()">📋 Copiar Sensibilidade</button>
+  <section class="avatar-carousel">
+    <!-- 🖼️ Suas imagens -->
+    <div class="avatar-container">
+      <img src="https://i.ibb.co/HfJzwWpd/Whats-App-Image-2025-11-06-at-17-23-03.jpg" class="avatar active">
+      <img src="https://i.ibb.co/YTVwzpMp/Whats-App-Image-2025-11-06-at-17-23-07.jpg" class="avatar">
+      <img src="https://i.ibb.co/84jHFbmc/89f2d53a-f906-4f83-8910-5e139b953d74.jpg" class="avatar">
     </div>
+    <button class="avatar-prev">‹</button>
+    <button class="avatar-next">›</button>
+  </section>
 
-    <footer>✨ Desenvolvido por Mateus (Edenn) | Stars Sensi FF 🔥</footer>
-  </div>
+  <section class="panel">
+    <div class="social-icons">
+      <a href="https://www.instagram.com/mateussxl7?igsh=MTFxbHRnb25lMWdpOQ==" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+      <a href="https://www.tiktok.com/@eumateus_07?_r=1&_t=ZS-91EzUrKzYJu" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok"></a>
+      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub"></a>
+      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" alt="Discord"></a>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 mateussxl7 | Criador de Bots e Sites Profissionais</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
