--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mateussxl7 | Futuristic Portfolio</title>
+  <title>mateussxl7 | Garage Futurista</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
 </head>
 <body>
-  <div id="vanta-bg"></div>
+  <canvas id="smoke"></canvas>
 
   <header>
     <h1 class="neon-title">mateussxl7 🎭</h1>
@@ -17,27 +15,27 @@
   </header>
 
   <section class="avatar-carousel">
-    <!-- 🖼️ Suas imagens -->
     <div class="avatar-container">
+      <!-- ✅ use imagens hospedadas em link direto (.jpg, .png) -->
       <img src="https://i.ibb.co/HfJzwWpd/Whats-App-Image-2025-11-06-at-17-23-03.jpg" class="avatar active">
       <img src="https://i.ibb.co/YTVwzpMp/Whats-App-Image-2025-11-06-at-17-23-07.jpg" class="avatar">
       <img src="https://i.ibb.co/84jHFbmc/89f2d53a-f906-4f83-8910-5e139b953d74.jpg" class="avatar">
+      <button class="avatar-prev">‹</button>
+      <button class="avatar-next">›</button>
     </div>
-    <button class="avatar-prev">‹</button>
-    <button class="avatar-next">›</button>
   </section>
 
   <section class="panel">
     <div class="social-icons">
-      <a href="https://www.instagram.com/mateussxl7?igsh=MTFxbHRnb25lMWdpOQ==" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
-      <a href="https://www.tiktok.com/@eumateus_07?_r=1&_t=ZS-91EzUrKzYJu" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok"></a>
-      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub"></a>
-      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png" alt="Discord"></a>
+      <a href="https://www.instagram.com/mateussxl7" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"></a>
+      <a href="https://www.tiktok.com/@eumateus_07" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png"></a>
+      <a href="#" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3670/3670157.png"></a>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 mateussxl7 | Criador de Bots e Sites Profissionais</p>
+    <p>© 2025 mateussxl7 | Criador de Bots e Sites</p>
   </footer>
 
   <script src="script.js"></script>
